# stooge

./: Makefile.am  README.md  configure.ac
src/: Makefile.inc  stooge.c
